--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://SunshineMccoy.gihub.io/calculator",
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
